# vampter

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt  temp.tsx  vercel.json
.github/workflows/: ingestion.yml
.poolside/: settings.local.yaml
backend/: .env.example  Dockerfile  check_db_state.py  config.py  docker-compose.yml  flush_redis.py  fly.toml  main.py  pyproject.toml  requirements.txt  seed_sample_data.py
backend/app/: __init__.py  main.py
backend/app/routers/: __init__.py  audit.py
backend/cache/: __init__.py  connection.py  semantic_cache.py
backend/ingestion/: __init__.py  api_client.py  graph_extractor.py  parser.py  pipeline.py  run_ingestion.py  stores.py
backend/workflow/: __init__.py  edges.py  graph.py  state.py
backend/workflow/nodes/: __init__.py  compress_node.py  generate_node.py  graph_node.py  router_node.py  vector_node.py
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/vampter/: audit-console.tsx  command-input.tsx  deep-evidence.tsx  empty-state.tsx  results-view.tsx  site-header.tsx
frontend/types/: audit.ts
