[tool.poetry]
name = "vampter-backend"
version = "1.0.0"
description = "Vampter AI Policy Document Auditor Backend"

[tool.poetry.dependencies]
python = "3.11"
fastapi = "0.111.0"
uvicorn = "0.30.1"
pydantic-settings = "2.3.4"
python-dotenv = "1.0.1"
mangum = "0.17.0"
httpx = "0.27.2"
llama-index = "0.10.50"
llama-index-vector-stores-qdrant = "0.2.12"
llama-index-graph-stores-neo4j = "0.2.3"
llama-index-embeddings-mistralai = "0.3.0"
neo4j = "5.24.0"
redis = "5.0.7"
redisvl = "0.1.3"
langgraph = "0.1.4"
instructor = "1.3.3"
openai = "1.35.0"
tiktoken = "0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"